--- a/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj.filters
+++ b/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="소스 파일\99. Manager\InputManager">
       <UniqueIdentifier>{71787f37-8adf-4e91-819c-9699cb5dc61f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\98. Pattern">
+      <UniqueIdentifier>{6903beed-1634-4629-87ab-40b25ecc51f0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -126,6 +129,9 @@
     <ClInclude Include="InputManager.h">
       <Filter>소스 파일\99. Manager\InputManager</Filter>
     </ClInclude>
+    <ClInclude Include="Prototype.h">
+      <Filter>소스 파일\98. Pattern</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32API_Framework.cpp">
@@ -166,6 +172,9 @@
     </ClCompile>
     <ClCompile Include="InputManager.cpp">
       <Filter>소스 파일\99. Manager\InputManager</Filter>
+    </ClCompile>
+    <ClCompile Include="Prototype.cpp">
+      <Filter>소스 파일\98. Pattern</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
