--- a/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj
+++ b/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj
@@ -151,7 +151,9 @@
     <ClInclude Include="MainUpdate.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="ObjectFactory.h" />
     <ClInclude Include="ObjectManager.h" />
+    <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Prototype.h" />
     <ClInclude Include="Resource.h" />
@@ -171,6 +173,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
+    <ClCompile Include="ObjectPool.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Prototype.cpp" />
     <ClCompile Include="Scene.cpp" />
