--- a/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj
+++ b/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Bridge.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Define.h" />
