--- a/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj.filters
+++ b/win32API_Framework/win32API_Framework/win32API_Framework.vcxproj.filters
@@ -73,6 +73,9 @@
     <Filter Include="소스 파일\98. Pattern\ObjectPool">
       <UniqueIdentifier>{8482ec51-5bdb-47d5-b156-3fae70cee6bf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\98. Pattern\Bridge">
+      <UniqueIdentifier>{8c202b9c-01dd-4075-8559-fc2d18430cb0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -146,6 +149,9 @@
     </ClInclude>
     <ClInclude Include="ObjectPool.h">
       <Filter>소스 파일\98. Pattern\ObjectPool</Filter>
+    </ClInclude>
+    <ClInclude Include="Bridge.h">
+      <Filter>소스 파일\98. Pattern\Bridge</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
