--- a/Picking/Picking/Picking.vcxproj
+++ b/Picking/Picking/Picking.vcxproj
@@ -139,13 +139,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Bitmap.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="ImageManager.h" />
+    <ClInclude Include="Include.h" />
+    <ClInclude Include="MainUpdate.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Picking.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Stage.h" />
+    <ClInclude Include="Struct.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bitmap.cpp" />
+    <ClCompile Include="ImageManager.cpp" />
+    <ClCompile Include="MainUpdate.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Picking.cpp" />
+    <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Picking.rc" />
